--- a/package.json
+++ b/package.json
@@ -10,23 +10,27 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
-    "vue": "^3.4.0",
-    "vue-router": "^4.2.5",
-    "pinia": "^2.1.7",
     "daisyui": "^4.4.19",
-    "tailwindcss": "^3.4.0",
-    "qrcode": "^1.5.3",
-    "jspdf": "^2.5.1",
+    "date-fns": "^2.30.0",
     "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
+    "pinia": "^2.1.7",
+    "qrcode": "^1.5.3",
+    "tailwindcss": "^3.4.0",
     "uuid": "^9.0.1",
-    "date-fns": "^2.30.0"
+    "vue": "^3.4.0",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
+    "@types/node": "^24.9.2",
+    "@types/uuid": "^10.0.0",
     "@vitejs/plugin-vue": "^4.5.0",
-    "vite": "^5.0.0",
+    "@vitejs/plugin-vue-jsx": "^5.1.1",
     "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.32",
     "eslint": "^8.55.0",
-    "eslint-plugin-vue": "^9.19.2"
+    "eslint-plugin-vue": "^9.19.2",
+    "postcss": "^8.4.32",
+    "typescript": "^5.9.3",
+    "vite": "^5.0.0"
   }
 }
